--- a/CloudCoverDetectionMasking.ipynb
+++ b/CloudCoverDetectionMasking.ipynb
@@ -255,8 +255,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Anlysing the data...\n",
-        "It is observed that the given meta file of this dataset contains chip_ids, corresponding location, date and time of the imaging, and the location path on cloud"
+        "Anlaysing the data...\n",
+        "\n",
+        "It is observed that the given meta file of this dataset contains chip_ids, corresponding location, date and time of the images, and the location path on cloud"
       ],
       "metadata": {
         "id": "u6D7wxeTWZ6D"
@@ -2282,7 +2283,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Performance Metrics"
+        "##Functions to Evaluate Performance Metrics"
       ],
       "metadata": {
         "id": "k1gcNoPIUpUJ"
@@ -2346,7 +2347,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Plot the progress to monitor validation process"
+        "##Functions to Plot the Progress to Monitor Validation Process"
       ],
       "metadata": {
         "id": "R6AZMoBR7Re9"
@@ -2684,12 +2685,7 @@
         "               \"optimizer\": optim.SGD\n",
         "               }\n",
         "\n",
-        "n_epochs = 6\n",
-        "\n",
-        "# These are used for evaluation; evaluate.load is from HuggingFace\n",
-        "train_mean_iou = evaluate.load(\"mean_iou\")\n",
-        "val_mean_iou = evaluate.load(\"mean_iou\")\n",
-        "test_mean_iou = evaluate.load(\"mean_iou\")"
+        "n_epochs = 6\n"
       ],
       "metadata": {
         "id": "-KK7oGPI-uEM",
@@ -3534,7 +3530,7 @@
       "cell_type": "markdown",
       "source": [
         "# Model Training\n",
-        "The model tuned through validation is now trained"
+        "The model tuned through validation is shall be trained now"
       ],
       "metadata": {
         "id": "QUCcT2QKynao"
@@ -4061,7 +4057,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1fHPsKN06WtB2Z+BkOA7m",
+      "authorship_tag": "ABX9TyNUyX+dyIyo3jHTekAthvnx",
       "include_colab_link": true
     },
     "kernelspec": {
